# bug-lang

./: .gitignore  Makefile  README.md  Readme.md  ast.dot  buglang.py  clean.bat  error_output.html  errors_output.html  grammar.y  lexical.l  main.py  output  output.go  output.html  pyproject.toml  symbols_table.html  tac-code  tac-code_fix  token_log.html
bug_lang/: checker.py  context.py  dot_gen.py  go_ast.py  go_generator.py  gointerp.py  gotrans.py  lexer.py  parser.py  render.py  translator.py
bug_lang/utils/: stdlib.py
examples/: print.bug  print.mc  test.bug
