[tool.poetry]
name = "bug-lang"
version = "0.1.0"
description = "a more complicated way to write golang code"
authors = ["Ancordss <maradiaga.l.james@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sly = "^0.5"
click = "^8.1.7"
taskipy = "^1.12.2"
rich = "^13.7.0"
multimethod = "^1.11.2"
graphviz = "^0.20.1"
tabulate = "^0.9.0"

[tool.pyright]
reportMatchNotExhaustive=true
reportUnnecessaryTypeIgnoreComment=true
reportUnnecessaryComparison=true
reportIncompatibleMethodOverride=true
reportImportCycles=false


[tool.ruff]
# Disable fix for unused imports (`F401`).
unfixable = ["F401"]
select = ['I']
line-length = 120

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"
pyright = "^1.1.351"
pytest-mock = "^3.12.0"

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
type_check = "pyright ."
test = "pytest"
compile = "python3 buglang.py -R"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
